# BayesianML-SWA

./: 2D.txt  README.md  cifar10_cnn.txt  cifar10_mobilenet.txt  cifar10_mobilenet_run2.txt  friedman1.txt  mnist.txt  pyproject.toml  requirements.txt  test.ipynb
runs/: cifar100_mobilenet.txt  friedman3.txt  gcn.txt
src/datasets/: synthetic.py
src/models/: mlp.py
src/scripts/: synthetic_mlp.py
src/swa_benchmark/datasets/: __init__.py  cifar.py  graph.py  mnist.py  synthetic.py
src/swa_benchmark/models/: __init__.py  cnn.py  ensemble.py  gcn.py  mlp.py  mobilenet.py
src/swa_benchmark/scripts/Cluster/: gcn.py
src/swa_benchmark/scripts/cifar/: cifar100_cnn.py  cifar100_mobilenet.py  cifar10_cnn.py  cifar10_mobilenet.py
src/swa_benchmark/scripts/mnist/: cnn.py
src/swa_benchmark/scripts/synthetic/: mlp.py  mlp2D.py  mlpFriedman.py  mlpFriedman1.py  mlpFriedman3.py  mlp_loss.py
src/swa_benchmark/tests/: scheduler.py
src/swa_benchmark/utils/: metric.py  scheduler.py  training.py  visualization.py
src/utils/: swa.py  training.py
